fixed scrollbar

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,8 @@
 .outer-container {
   display: flex;
   width: 100vw;
+
+  flex-grow: 1;
 }
 .aside-container {
   flex: 0 1 250px;
