--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -12,12 +12,8 @@
 .navigation {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   background: var(--nav-background-color);
-  padding: 0 0.25rem;
-  height: 4rem;
-  position: sticky;
-  top: 0;
-  right: 0;
-  left: 0;
+  padding: 0.25rem 0.25rem;
+
   z-index: 2;
   width: 100vw;
 }
